--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -1,3 +1,19 @@
+@media screen and (max-width: 600px) {
+    .content {
+        grid-template-columns: auto;
+    }
+
+    .content .title {
+        margin: auto;
+    }
+
+
+
+    .content .caracteristicas {
+        margin: auto;
+    }
+}
+
 @media screen and (max-width: 760px) {
     div.structure {
         grid-template-columns: 1fr;
