--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ ul {
 
 img {
     display: block;
-    max-width: 100%;
+    width: 100%;
     border-radius: 5px;
 }
 
@@ -250,6 +250,7 @@ img {
     display: grid;
     align-content: start;
     gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     
     padding: 30px;
     background: #FAFBFC;
